Bare Layout Done

--- a/file1.html
+++ b/file1.html
@@ -6,6 +6,26 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
+    <div class = "main">
+        <div class = "numbers">
+            <div class = "operators"></div>
+            <div class = "num"></div>
+            <div class = "num"></div>
+            <div class = "num"></div>
+            <div class = "num"></div>
+            <div class = "num"></div>
+            <div class = "num"></div>
+            <div class = "num"></div>
+            <div class = "num"></div>
+            <div class = "num"></div>
+        </div>
+
+
+
+        <div class = "screen"></div>
+
+    </div>
+
   <script src="calc.js"></script>
 </body>
 </html>
