Got some functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class = "screen"></div>
       <div class = "bottom">
         <div class = "buttons">
-          <button type = "button" class = "btn dark">AC</button>
+          <button onclick = "display()" type = "button" class = "btn dark">AC</button>
           <button type = "button" class = "btn dark">+/-</button>
           <button type = "button" class = "btn dark">%</button>
           <button type = "button" class = "btn side">/</button>
