--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
+    <div class = "header"> Sohanas Calculator</div>
     <div class = "main">
       <div class = "screen"></div>
       <div class = "bottom">
